tests/fixtures/invalid/divmod_float_set.py
# Cannot call divmod() with Float, Set[int]
x = divmod(1.0, {1, 2, 3})
